<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/template_item">

    <ImageView
        android:id="@+id/template_history_postcard_image"
        android:layout_width="0dp"
        android:layout_height="113dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/template1" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/delete_postcard_cross"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_delete_postcard"
            />

        <ImageButton
            android:id="@+id/template_history_postcard_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/clear_small"
            android:background="#00000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>