...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/merge_reverse">

        <ImageButton
            android:id="@+id/button_export_to_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:src="@drawable/export_pdf"
            android:textColor="@color/colorWhite" />

        <ImageButton
            android:id="@+id/button_export_to_pdf_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:src="@drawable/share"
...
