...
        android:icon="@drawable/template_icon" />

    <item android:id="@+id/nav_reverse"
        android:title="@string/bottom_menu_reverse"
        android:icon="@drawable/reverse_icon" />

    <item android:id="@+id/nav_history"
        android:title="@string/bottom_menu_history"
        android:icon="@drawable/history_icon" />

</menu>

